# dom-boids

./: .gitignore  .gitignore~  README.md
boids/: Boid.cpp  Boid.h  CMakeLists.txt  Core.cpp  Dockerfile  Flock.cpp  Flock.h  Line.cpp  Line.h  Maccros.h  Map.cpp  Map.h  Pos2D.cpp  Pos2D.h  deploy.sh  input_test.protobinary  main.cpp  map.pb.cc  map.pb.h  map_test.protobinary  output.protobinary  test_http.sh
boids/include/: Boid.h  Core.h  Flock.h  HttpServer.h  Macros.h  Map.h  Pos2D.h
boids/proto/: CMakeLists.txt  generate_doc.sh  generate_js.sh  map.proto  map_pb.js
boids/src/: Boid.cpp  Core.cpp  Flock.cpp  HttpServer.cpp  Map.cpp  Pos2D.cpp
demo/: Dockerfile  package.json
demo/public/: index.html  manifest.json  map.proto
demo/src/: App.scss  App.tsx  Loader.tsx  Modal.scss  Modal.tsx  SliderSection.tsx  TextSection.tsx  loader.scss  text.ts
demo/src/content/: ExplanationContent.tsx
demo/src/simulation/: Boid.ts  Configuration.tsx  Parameters.ts  ProtoInterfaces.ts  Simulator.ts  Simulator.tsx  SimulatorControls.scss  SimulatorControls.tsx  domParsing.ts
dom_parser/: index.ts  package-lock.json  package.json  tsconfig.json
js_module/: Dockerfile  bundle.js  deploy.sh  index.html  index.js  map.proto  package-lock.json  package.json  style.css  tsconfig.json
js_module/src/: Boid.ts  ProtoInterfaces.ts  domParsing.ts  index.js  index.ts
